--- a/artifacts/ias-perl-script-infra/DEBIAN/control
+++ b/artifacts/ias-perl-script-infra/DEBIAN/control
@@ -1,3 +1,3 @@
-Depends: libhash-merge-simple-perl libfile-homedir-perl libdate-manip-perl
+Depends: libhash-merge-simple-perl, libfile-homedir-perl, libdate-manip-perl
 
 
